Vous ne voyez que les livres que vous créez, isolation de l'ajout d'un livre + optimisation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".BookList"/>
+        <activity android:name=".BookAdd"/>
         <activity android:name=".BookDetail"/>
         <activity android:name=".BookEdit"/>
     </application>
